// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar displays a badge 1`] = `
<span
  className=""
  name="First Last"
>
  <span
    className=""
  >
    FL
  </span>
  <div
    aria-hidden={true}
    className=""
  >
    <span
      className=""
    >
      <span
        aria-hidden={true}
        className=""
        role="presentation"
      >
        <svg
          className=""
          viewBox="0 0 2048 2048"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1570 437q42 0 78 15t64 43 42 63 16 79q0 40-15 77t-43 65l-794 795q-28 28-65 43t-77 16q-40 0-77-15t-65-44l-362-362q-28-28-43-65t-16-77q0-42 16-78t43-64 63-42 79-16q40 0 77 15t65 43l220 220 652-653q28-28 65-43t77-15z"
          />
        </svg>
      </span>
    </span>
  </div>
</span>
`;

exports[`Avatar displays custom initials via getInitials 1`] = `
<span
  className=""
  name="First Last"
>
  <span
    className=""
  >
    IA
  </span>
</span>
`;

exports[`Avatar handles customSize 1`] = `
<span
  className=""
  name="First Last"
  style={
    Object {
      "height": "33px",
      "width": "33px",
    }
  }
>
  <span
    className=""
  >
    FL
  </span>
</span>
`;

exports[`Avatar prioritizes icon over initials 1`] = `
<span
  className=""
  name="First Last"
>
  <span
    className=""
  >
    <span
      className="icon"
    />
  </span>
</span>
`;

exports[`Avatar prioritizes image over icon 1`] = `
<span
  className=""
>
  <span
    className=""
  >
    <span
      className="icon"
    />
  </span>
  <img
    className=""
    src="i.png"
  />
</span>
`;

exports[`Avatar prioritizes image over initials 1`] = `
<span
  className=""
  name="First Last"
>
  <span
    className=""
  >
    FL
  </span>
  <img
    className=""
    src="i.png"
  />
</span>
`;

exports[`Avatar prioritizes image over initials and icon 1`] = `
<span
  className=""
  name="First Last"
>
  <span
    className=""
  >
    <span
      className="icon"
    />
  </span>
  <img
    className=""
    src="i.png"
  />
</span>
`;

exports[`Avatar renders 1 initial with a 1-word name 1`] = `
<span
  className=""
  name="First"
>
  <span
    className=""
  >
    F
  </span>
</span>
`;

exports[`Avatar renders 2 initials with a 2-word name 1`] = `
<span
  className=""
  name="First Last"
>
  <span
    className=""
  >
    FL
  </span>
</span>
`;

exports[`Avatar renders 2 initials with a 3-word name 1`] = `
<span
  className=""
  name="First M. Last"
>
  <span
    className=""
  >
    FL
  </span>
</span>
`;

exports[`Avatar renders a default state 1`] = `
<span
  className=""
>
  <span
    className=""
  >
    <span
      aria-hidden={true}
      className=""
      role="presentation"
    >
      <svg
        className=""
        viewBox="0 0 2048 2048"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1330 1203q136 47 245 131t186 196 118 243 41 275h-128q0-164-58-304t-162-244-243-161-305-59q-107 0-206 27t-184 76-155 119-119 155-77 185-27 206H128q0-144 42-275t119-242 186-194 245-133q-78-42-140-102T475 969t-67-157-24-172q0-133 50-249t137-204T774 50t250-50q133 0 249 50t204 137 137 203 50 250q0 88-23 171t-67 156-105 133-139 103zM512 640q0 106 40 199t110 162 163 110 199 41q106 0 199-40t162-110 110-163 41-199q0-106-40-199t-110-162-163-110-199-41q-106 0-199 40T663 278 553 441t-41 199z"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`Avatar renders an icon 1`] = `
<span
  className=""
>
  <span
    className=""
  >
    <span
      className="icon"
    />
  </span>
</span>
`;

exports[`Avatar renders an icon if the name is not alphabetic 1`] = `
<span
  className=""
  name="(111)-555-1234"
>
  <span
    className=""
  >
    <span
      aria-hidden={true}
      className=""
      role="presentation"
    >
      <svg
        className=""
        viewBox="0 0 2048 2048"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1330 1203q136 47 245 131t186 196 118 243 41 275h-128q0-164-58-304t-162-244-243-161-305-59q-107 0-206 27t-184 76-155 119-119 155-77 185-27 206H128q0-144 42-275t119-242 186-194 245-133q-78-42-140-102T475 969t-67-157-24-172q0-133 50-249t137-204T774 50t250-50q133 0 249 50t204 137 137 203 50 250q0 88-23 171t-67 156-105 133-139 103zM512 640q0 106 40 199t110 162 163 110 199 41q106 0 199-40t162-110 110-163 41-199q0-106-40-199t-110-162-163-110-199-41q-106 0-199 40T663 278 553 441t-41 199z"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`Avatar renders an image 1`] = `
<span
  className=""
>
  <span
    className=""
  >
    <span
      aria-hidden={true}
      className=""
      role="presentation"
    >
      <svg
        className=""
        viewBox="0 0 2048 2048"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1330 1203q136 47 245 131t186 196 118 243 41 275h-128q0-164-58-304t-162-244-243-161-305-59q-107 0-206 27t-184 76-155 119-119 155-77 185-27 206H128q0-144 42-275t119-242 186-194 245-133q-78-42-140-102T475 969t-67-157-24-172q0-133 50-249t137-204T774 50t250-50q133 0 249 50t204 137 137 203 50 250q0 88-23 171t-67 156-105 133-139 103zM512 640q0 106 40 199t110 162 163 110 199 41q106 0 199-40t162-110 110-163 41-199q0-106-40-199t-110-162-163-110-199-41q-106 0-199 40T663 278 553 441t-41 199z"
        />
      </svg>
    </span>
  </span>
  <img
    className=""
    src="i.png"
  />
</span>
`;
